Fix Vercel deployment: Update build config and routing for Vite React app

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "builds": [
-    { "src": "api/main.py", "use": "@vercel/python" }
+    { "src": "api/main.py", "use": "@vercel/python" },
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/main.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "/api/main.py" },
+    { "src": "^/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "^/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 } 
